--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,11 +1,8 @@
 <resources>
 
-    <string name="status">Average fuel prices</string>
-	<string name="diesel">Diesel: %1$s €</string>
-    <string name="extension_name">Benziini</string>
-    <string name="application_name">Dashclock Benziini Extension</string>
-    <string name="extension_info">Displays information about the current average fuel prices in Finland.</string>
-    <string name="petrol95">Petrol: %1$s € (95E)</string>
-    <string name="petrol98">Petrol: %1$s € (98E)</string>
+    <string name="status">Nightly %1$s</string>
+    <string name="extension_name">FK Check</string>
+    <string name="application_name">Franco Kernel Nightly N4 Check Extension</string>
+    <string name="extension_info">Displays several top lines of Changelog.</string>
     
 </resources>
